Scrollbar fixed

--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@
 
 * {
     scrollbar-width: thin;
-    scrollbar-color: #2d2c35 #17161d;
+    scrollbar-color: #2d2c34 #17161d;
   }
 
   *::-webkit-scrollbar {
